--- a/static/sass/base/_fonts.scss
+++ b/static/sass/base/_fonts.scss
@@ -41,6 +41,7 @@ p, ul, li {
 
 h1 {
   @include font-size($font-size-h1);
+  margin-bottom: 5px;
 }
 
 h2 {
